--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #1a1a1a;
-    background-image: url('../../wallpaper.png');
+    background-image: url('../wallpaper.png');  /* Updated wallpaper path */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
